# hippo

./: .gitignore  README.md  app.py  config.json  make_collection.py  pyproject.toml  revise_metadata.py  upload_cameras.py
.github/workflows/: formatting.yml  pypi.yml  release.yml  test.yml
docs/: README.md
docs/user/: README.md  cli.md  getting_started.md  python.md
examples/: simpleserve.py
examples/aiola/: simplepopulate.py  simplerevision.py
examples/coulton/: simplepopulate.py
examples/hervias_caimapo/: simplepopulate.py
examples/hilton/: simplepopulate.py
examples/recursive_collection/: simplepopulate.py
henry/: __init__.py  collection.py  core.py  exceptions.py  product.py  source.py
hippoclient/: caching.py  cli.py  collections.py  core.py  downloads.py  helper.py  product.py  relationships.py  tools.py
hippometa/: __init__.py  archive.py  base.py  beam.py  cameras.py  catalog.py  mapset.py  numeric.py
hipposerve/: settings.py
hipposerve/api/: app.py  auth.py  groups.py  product.py  relationships.py  soauth.py  users.py
hipposerve/api/models/: groups.py  product.py  relationships.py  users.py
hipposerve/database/: __init__.py
hipposerve/service/: acl.py  auth.py  collection.py  groups.py  product.py  storage.py  users.py
hipposerve/storage/: __init__.py
hipposerve/web/: __init__.py  auth.py  router.py  search.py
hipposerve/web/templates/: collection.html  collection_edit.html  core.html  index.html  navigation.html  parent_child_diagram.html  product.html  product_edit.html  search_results.html  soauth_user.html  user.html
tests/: conftest.py
tests/test_api/: conftest.py  test_group_api.py  test_product_api.py  test_relationship_api.py  test_users_api.py
tests/test_client/: conftest.py  test_cache.py  test_collection.py  test_collection_cli.py  test_create_product.py
tests/test_services/: conftest.py  test_collection_service.py  test_group_service.py  test_hierarchical_collection.py  test_oversized_collection.py  test_product_service.py  test_storage_service.py  test_user_service.py
