[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include=["hippoclient*", "henry*", "hippometa*", "hipposerve*"]
exclude=["*tests*", "*examples*", "*htmlcov*"]

[tool.setuptools.package-data]
hipposerve = ["web/static/*.svg", "web/static/*.ico", "web/static/*.png", "web/templates/*.html"]

[project]
name = "hipposerve"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "pydantic<2.11",
    "pydantic-settings",
    # 4.1.0 and above introduce a deprecation warning
    # that breaks the latest versions of asyncer.
    "anyio<4.1.0",
    "asyncer",
    "fastapi",
    "uvicorn",
    "beanie",
    "minio",
    "jinja2",
    "xxhash",
    "jinja-markdown",
    "typer",
    "httpx",
    "astropy",
    "pyjwt",
    "pwdlib[argon2]",
    "python-multipart",
    "loguru",
    "tqdm",
    "motor",
    "textual[syntax]",
    "soauth>=0.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "testcontainers",
    "coverage",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xprocess"
]

[project.scripts]
henry = "hippoclient.cli:main"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "hipposerve",
    "hippoclient"
]
omit = [
    "hipposerve/web/*"
]
